--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -6,8 +6,6 @@
 
     <title>Login - Home page</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -18,7 +16,7 @@
         <img th:src="@{/images/ShopmeAdminBig.png}" style="display: flex; margin: 0 auto">
         <form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto">
             <div th:if="${param.error}">
-                <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}}]]</p>
+                <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
             </div>
             <p>Access to Shopme Control Panel</p>
             <p>
