--- a/src/main/resources/templates/admin/fragments.html
+++ b/src/main/resources/templates/admin/fragments.html
@@ -19,5 +19,61 @@
    th:href="@{'/shopme/admin/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
     [[${label}]]</a>
 </li>
+
+
+<div class="container-fluid" th:fragment="menu">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <a href="" class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/users}" class="nav-link">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/categories}" class="nav-link">Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/brands}" class="nav-link">Brands</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/products}" class="nav-link">Product</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/customers}" class="nav-link">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/shipping}" class="nav-link">Shipping</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/orders}" class="nav-link">Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/reports}" class="nav-link">Reports</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/articles}" class="nav-link">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/menus}" class="nav-link">Menus</a>
+                </li>
+                <li class="nav-item">
+                    <a th:href="@{/shopme/admin/settings}" class="nav-link">Settings</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+
+<div class="text-center" th:fragment="footer">
+    <p>Shopme Control Panel - Copyright &copy; Shopme</p>
+</div>
+
+
 </body>
 </html>
