--- a/src/main/resources/templates/admin/category/categories.html
+++ b/src/main/resources/templates/admin/category/categories.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Category page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-</head>
+<head th:replace="~{admin/fragments :: page_head}"></head>
 <body>
 <div th:replace="~{admin/fragments :: menu}"></div>
 
 <div>
     <h2>User manager</h2>
+    <div class="mb-2">
+        <a th:href="@{/shopme/admin/categories/new}" class="fas fa-user-plus fa-2x icon-dark mr-4"></a>
+<!--        <a th:href="@{/shopme/admin/users/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-4"></a>-->
+    </div>
     <div>
         <table class="table table-responsive-xl table-striped table-bordered">
             <thead class="thead-dark">
@@ -44,7 +40,7 @@
 </div>
 
 
-<div th:replace="~{admin/fragments :: footer}"></div>
+<head th:replace="~{admin/fragments :: page_footer}"></head>
 
 </body>
 </html>
