--- a/src/main/resources/templates/admin/category/category_form.html
+++ b/src/main/resources/templates/admin/category/category_form.html
@@ -14,7 +14,7 @@
             <div class="form-group row mb-3">
                 <label class="col-sm-4 col-form-label">Category name</label>
                 <div class="col-sm-8">
-                    <input type="email" class="form-control" id="name" th:field="*{name}" required minlength="3"
+                    <input type="text" class="form-control" id="name" th:field="*{name}" required minlength="3"
                            maxlength="128">
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 <label class="col-sm-4 col-form-label">Image</label>
                 <div class="col-sm-8">
                     <input type="hidden" th:field="*{image}">
-                    <input type="file" id="fileImage" accept="image/jpeg, image/png" name="image">
+                    <input type="file" id="fileImage" accept="image/jpeg, image/png" name="fileImage" required>
                     <img th:src="@{/images/image-thumbnail.png}" class="img-fluid mr-5" style="height: 74px"
                          alt="Image preview" id="thumbnail">
                 </div>
@@ -55,7 +55,7 @@
 
             <div class="text-center">
                 <input type="submit" value="Save" class="btn btn-primary m-3">
-                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel">
+                <input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancelCreateCategory">
             </div>
         </div>
     </form>
@@ -67,7 +67,69 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        doc
-    })
+        $('#buttonCancelCreateCategory').on('click', function () {
+            window.location = "[[@{/shopme/admin/categories}]]";
+        })
+
+
+        $('#fileImage').change( function (){
+            let fileSize = this.files[0].size;
+            if (fileSize > 1048576) {
+                this.setCustomValidity("You must choose an image less than 1Mb.")
+                this.reportValidity();
+            } else {
+                this.setCustomValidity("")
+                showImageThumbnail(this);
+            }
+        })
+    });
+
+    function showImageThumbnail(fileInput) {
+        var file = fileInput.files[0];
+        var reader = new FileReader();
+
+        reader.onload = function (e){
+            $('#thumbnail').attr("src", e.target.result);
+        }
+
+        reader.readAsDataURL(file);
+    }
+
+    function checkEmailUnique(form) {
+        let userId = $('#userId').val();
+
+        if (userId) {
+            form.submit();
+            return false;
+        }
+
+        let url = "[[@{/shopme/admin/users/check-email}]]";
+        let csrfValue = $("input[name='_csrf']").val();
+        let userEmail = $('#email').val();
+        let params = {
+            userId: userId,
+            email: userEmail,
+            _csrf: csrfValue
+        };
+
+        $.post(url, params, function (response) {
+            if (response == "Ok") {
+                form.submit();
+            } else if (response == "Duplicated") {
+                // showModalDialog("Duplicated email", "There is another user having the email " + userEmail);
+                alert("There is another user having the email " + userEmail);
+            }
+        });
+
+        return false;
+    }
+
+
+    function showModalDialog(title, message) {
+        $("#modalTitle").text(title);
+        $("#modalBody").text(message);
+        $("#modalDialog").modal();
+    }
 </script>
+<script th:src="@{/js/common_form.js}"></script>
 </html>
