--- a/src/main/resources/templates/admin/user/login.html
+++ b/src/main/resources/templates/admin/user/login.html
@@ -20,13 +20,13 @@
             </div>
             <p>Access to Shopme Control Panel</p>
             <p>
-                <input type="email" name="email" class="form-control" placeholder="E-mail" required>
+                <input type="email" name="email" class="form-control" placeholder="E-mail" required />
             </p>
             <p>
-                <input type="password" name="password" class="form-control" placeholder="Password" required>
+                <input type="password" name="password" class="form-control" placeholder="Password" required />
             </p>
             <p>
-                <input type="submit" value="Login" class="btn btn-primary">
+                <input type="submit" value="Login" class="btn btn-primary" />
             </p>
         </form>
     </div>
