--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -161,10 +161,10 @@
                 Are you sure you want to delete this user?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <!-- Thêm input hidden để lưu trữ userId -->
                 <input type="hidden" id="modalUserId"/>
-                <button type="button" class="btn btn-primary" id="confirmDelete">Yes, delete it</button>
+                <button type="button" class="btn btn-primary" id="confirmDelete">Yes</button>
             </div>
         </div>
     </div>
