code pagination for category list

--- a/src/main/resources/templates/admin/fragments.html
+++ b/src/main/resources/templates/admin/fragments.html
@@ -13,10 +13,9 @@
 </th>
 
 
-
-<a th:fragment="page_link(pageNum, label)"
+<a th:fragment="page_link(moduleURL, pageNum, label)"
    class="page-link"
-   th:href="@{'/shopme/admin/users/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
+   th:href="@{'/shopme/admin/' + ${moduleURL} +'/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">
     [[${label}]]</a>
 </li>
 
@@ -67,6 +66,39 @@
             </ul>
         </div>
     </nav>
+</div>
+
+
+<div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
+    <div class="text-center m-1" th:if="${totalItems > 0}">
+        <span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+    </div>
+
+    <div class="text-center m-1" th:unless="${totalItems > 0}">
+        <span>No [[${entityName}]] found</span>
+    </div>
+    <div th:if="${totalItems > 0}">
+        <nav>
+            <ul class="pagination justify-content-center flex-wrap">
+                <li th:class="${currentPage == 1 ? 'page-item disabled' : 'page-item'}">
+                    <a th:replace="~{admin/fragments :: page_link(${moduleURL}, 1, 'First')}"></a>
+                </li>
+                <li th:class="${currentPage == 1 ? 'page-item disabled' : 'page-item'}">
+                    <a th:replace="~{admin/fragments :: page_link(${moduleURL}, ${currentPage - 1}, 'Previous')}"></a>
+                </li>
+                <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+                    th:each="i : ${#numbers.sequence(1, totalPages)}">
+                    <a th:replace="~{admin/fragments :: page_link(${moduleURL}, ${i}, ${i})}"></a>
+                </li>
+                <li th:class="${currentPage == totalPages ? 'page-item disabled' : 'page-item'}">
+                    <a th:replace="~{admin/fragments :: page_link(${moduleURL}, ${currentPage + 1}, 'Next')}"></a>
+                </li>
+                <li th:class="${currentPage == totalPages ? 'page-item disabled' : 'page-item'}">
+                    <a th:replace="~{admin/fragments :: page_link(${moduleURL}, ${totalPages}, 'Last')}"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </div>
 
 
