--- a/src/main/resources/templates/admin/category/categories.html
+++ b/src/main/resources/templates/admin/category/categories.html
@@ -26,7 +26,7 @@
                 <th>Category ID</th>
                 <th>Category Image</th>
                 <th>
-                    <a class="text-white" th:href="@{'/shopme/admin/categories?sortDir=' + ${revertSortDir}}">Category Name</a>
+                    <a class="text-white" th:href="@{'/shopme/admin/categories/page/' + ${currentPage} + '?sortDir=' + ${revertSortDir}}">Category Name</a>
                     <span th:class="${revertSortDir == 'desc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
                 </th>
                 <th>Category Alias</th>
@@ -68,6 +68,7 @@
     </div>
 </div>
 
+<div th:replace="~{admin/fragments :: pagination('categories', 'categories')}"></div>
 
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
