--- a/src/main/resources/templates/admin/user/users.html
+++ b/src/main/resources/templates/admin/user/users.html
@@ -116,35 +116,7 @@
 
 </div>
 
-<div class="text-center m-1" th:if="${totalItems > 0}">
-    <span>Showing user # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
-</div>
-
-<div class="text-center m-1" th:unless="${totalItems > 0}">
-    <span>No user found</span>
-</div>
-<div th:if="${totalItems > 0}">
-    <nav>
-        <ul class="pagination justify-content-center flex-wrap">
-            <li th:class="${currentPage == 1 ? 'page-item disabled' : 'page-item'}">
-                <a th:replace="~{admin/fragments :: page_link(1, 'First')}"></a>
-            </li>
-            <li th:class="${currentPage == 1 ? 'page-item disabled' : 'page-item'}">
-                <a th:replace="~{admin/fragments :: page_link(${currentPage - 1}, 'Previous')}"></a>
-            </li>
-            <li th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
-                th:each="i : ${#numbers.sequence(1, totalPages)}">
-                <a th:replace="~{admin/fragments :: page_link(${i}, ${i})}"></a>
-            </li>
-            <li th:class="${currentPage == totalPages ? 'page-item disabled' : 'page-item'}">
-                <a th:replace="~{admin/fragments :: page_link(${currentPage + 1}, 'Next')}"></a>
-            </li>
-            <li th:class="${currentPage == totalPages ? 'page-item disabled' : 'page-item'}">
-                <a th:replace="~{admin/fragments :: page_link(${totalPages}, 'Last')}"></a>
-            </li>
-        </ul>
-    </nav>
-</div>
+<div th:replace="~{admin/fragments :: pagination('users', 'users')}"></div>
 
 <div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="deleteUserModalLabel"
      aria-hidden="true">
