code export category csv

--- a/src/main/resources/templates/admin/category/categories.html
+++ b/src/main/resources/templates/admin/category/categories.html
@@ -14,7 +14,7 @@
     <h2>Category manager</h2>
     <div class="mb-2">
         <a th:href="@{/shopme/admin/categories/new}" class="fas fa-user-plus fa-2x icon-dark mr-4"></a>
-        <!--        <a th:href="@{/shopme/admin/users/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-4"></a>-->
+        <a th:href="@{/shopme/admin/categories/export/csv}" class="fas fa-file-csv fa-2x icon-dark mr-4"></a>
     </div>
 
     <div th:replace="~{admin/fragments :: message}"></div>
