--- a/src/main/resources/templates/admin/fragments.html
+++ b/src/main/resources/templates/admin/fragments.html
@@ -153,5 +153,34 @@
 </div>
 
 
+<div th:fragment="category_status">
+    <a th:if="${category.enabled == true}"
+       th:href="@{'/shopme/admin/categories/' + ${category.id} + '/enabled/false'}"
+       class="fas fa-2x fa-check-circle icon-green" style="text-decoration: none;"
+       title="Disabled this category"
+    ></a>
+
+    <a th:if="${category.enabled == false}"
+       th:href="@{'/shopme/admin/categories/' + ${category.id} + '/enabled/true'}"
+       class="fas fa-2x fa-check-circle icon-dark" style="text-decoration: none;"
+       title="Enabled this category"
+    ></a>
+</div>
+
+
+<div th:fragment="category_action">
+    <a th:href="@{'/shopme/admin/categories/edit/' + ${category.id}}"
+       class="fas fa-edit fa-2x icon-green"
+       title="Update this category"></a>
+    <th:block th:if="${category.hasChildren == false}">
+        <a href="#" class="fas fa-trash fa-2x icon-dark"
+           title="Delete this category"
+           data-toggle="modal"
+           data-target="#deleteModal"
+           th:attr="data-category-id=${category.id}"></a>
+    </th:block>
+</div>
+
+
 </body>
 </html>
