update user authentication

--- a/src/main/resources/templates/admin/fragments.html
+++ b/src/main/resources/templates/admin/fragments.html
@@ -22,7 +22,7 @@
 
 <div class="container-fluid" th:fragment="menu">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <a href="" class="navbar-brand" th:href="@{/}">
+        <a href="" class="navbar-brand" th:href="@{/shopme/admin/home}">
             <img th:src="@{/images/ShopmeAdminSmall.png}" alt="Image error">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
